# WaterOS

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  kernel-la  kernel-rv  output.txt
.cargo/: config.toml
.obsidian/: workspace.json
notes/: 2025-3-23-note.md
os-arch/: arch.canvas  file-system.md  transportation.md
references/: .gitignore  rme_platform_a7a_gcc.s  rme_platform_xc7z020.ld
scripts/: README.md  check_current_elf_file.sh  linker_toolchain_install.sh  rust-install.sh  rustc_target_for_oscmp.sh  rustc_target_tools_install.sh  test_in_qemu_riscv.sh  update.sh
sducore-master/: Cargo.toml  rust-toolchain.toml
sducore-master/.cargo/: config.toml
sducore-master/src/: entry.asm  link.ld  main.rs
src/: main.rs
src/arch/loongarch/: entry.asm  trap.asm
src/arch/riscv/: trap.asm
src/asm/loongarch/: entry.asm
src/asm/riscv/: entry.asm  wateros_platform_riscv64_gcc.S
src/rust/loongarch/: loongarch-main.rs
src/rust/riscv/: riscv-main.rs  trap.rs  virtual_devices.rs  virtual_memory.rs
src/rust/share/: lib.rs
src/rust/share/def/: mod.rs
src/rust/share/fs/: common.rs  ext4.rs  mod.rs
src/rust/share/io/: common.rs  mod.rs  stdout.rs  virtio.rs  virtio_driver_impl.rs  virtqueue.rs
src/script/riscv/: riscv-link.ld
tasks/: tasks.md  todo-list.md
tasks/test_scripts/loongarch/glibc/: busybox_testcode.sh  cyclictest_testcode.sh  iperf_testcode.sh  libcbench_testcode.sh  libctest_testcode.sh  lmbench_testcode.sh  ltp_testcode.sh  lua_testcode.sh
tasks/test_scripts/loongarch/musl/: iperf_testcode.sh  libcbench_testcode.sh  libctest_testcode.sh  lmbench_testcode.sh  ltp_testcode.sh
(+11 files in other folders)
