[package]
name = "water-os"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "./src/rust/share/lib.rs"
[profile.release]
panic = "abort"
[profile.dev]
panic = "unwind"
[[bin]]
name = "kernel-la"
path = "./src/rust/loongarch/loongarch-main.rs"
[[bin]]
name = "kernel-rv"
path = "./src/rust/riscv/riscv-main.rs"
[target.'cfg(target_arch = "loongarch64")'.dependencies]
[target.'cfg(target_arch = "riscv64")'.dependencies]

